--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "validator": "^13.7.0"
   },
   "devDependencies": {
