--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "friendify-api",
+  "name": "friendster-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -22,9 +22,12 @@
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "supertest": "^6.2.4",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^1.3.3"
+    "chai": "^4.3.6",
+    "nodemon": "^1.3.3",
+    "request": "^2.88.2"
   }
 }
