--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "cd src && node app.js",
+    "test": "mocha",
     "dev": "cd src && nodemon app.js"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mocha": "^10.0.0",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
